# voronoi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh
docs/: README.md  config.toml  index.html  index.xml  makefile  sitemap.xml
docs-old/: index.xml
docs-old/blog/: index.html  index.xml
docs-old/blog/contact/: index.html
docs-old/blog/publications/: index.html
docs-old/categories/: index.xml
docs-old/docs/: index.html
docs-old/docs/contribute/: index.html
docs-old/docs/usage/: index.html
docs-old/tags/: index.xml
docs/blog/: index.html
docs/blog/contact/: index.html
docs/blog/publications/: index.html
docs/categories/: index.html
docs/content/: _index.md
docs/content/blog/: contact.md  publications.md
docs/content/docs/: about.md  building.md  getting-started.md  tools.md
docs/docs/: index.html  index.xml
docs/docs/about/: index.html
docs/docs/building/: index.html
docs/docs/contribute/: index.html
docs/docs/getting-started/: index.html
docs/docs/math/: index.html
docs/docs/release-notes/: index.html
docs/docs/scaling/: index.html
docs/docs/tools/: index.html
docs/docs/usage/: index.html
docs/hugo/: config.toml
docs/hugo/content/docs/: building.md  contribute.md  math.md  release-notes.md  scaling.md  usage.md
docs/hugo/themes/kube/layouts/: index.html
docs/hugo/themes/kube/layouts/blog/: single.html
docs/hugo/themes/kube/layouts/partials/: footer.html
docs/hugo/themes/kube/static/css/: master.css
docs/tags/: index.html
docs/themes/kube/layouts/: 404.html  index.html
docs/themes/kube/layouts/docs/: single.html
docs/themes/kube/layouts/partials/: header.html
docs/themes/kube/layouts/partials/post/: meta.html
docs/themes/kube/static/js/: pts_demo_header.js
documentation/: Makefile
documentation/source/: conf.py  index.rst  intro.rst
imported/: build-petsc.sh
src/: apertures.F90  convert_accuracy.f95  core.F90  grid.F90  grid_aux.F90  main.F90  makefile  voronoi.F90  voronoi_constants.F90
src/compute/: grid.F90
test/: README.md  config.json  framework.py  test_aperture.py
test/DEPRECATED/edge_cases/: hex_to_tet.mlgi  run_tests.scr
test/DEPRECATED/sanity_check/: gold_3D.uge  gold_3D_MESH  run_tests.py  simple_3D.inp
test/sanity_check/: ._runtime  gold_2D.h5  gold_2D.stor  gold_2D.uge  gold_2D_MESH  gold_3D.h5  gold_3D.stor  gold_3D_pflotran  gold_simple_3D.stor  mesh_2D.inp  mesh_3D.inp  run_tests.py
test/testcases/: input_2d_geometric1.05.gridder  input_2d_loglog_100.gridder  input_2d_loglog_1000.gridder  input_2d_uniform_10.gridder  input_2d_uniform_100.gridder  input_2d_uniform_1000.gridder  run_gridder_test.csh
test/tests/: test_aperture.py
tools/: createMeshFromData.py  viewMPIscaling.py  viewSparseMatrix.py
